--- a/css/syntax.css
+++ b/css/syntax.css
@@ -22,7 +22,7 @@ pre.highlight {
  */
 
 .highlight .hll { background-color: #373b41 }
-.highlight  { background: #1d1f21; color: #c5c8c6 }
+.highlight pre { background: #1d1f21; color: #c5c8c6 }
 .highlight .c { color: #969896 } /* Comment */
 .highlight .err { color: #cc6666 } /* Error */
 .highlight .k { color: #b294bb } /* Keyword */
