--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -33,6 +33,7 @@ a img:focus {
 blockquote {
   color: #808080;
   font-style: italic;
+  white-space: pre-wrap;
 }
 hr.small {
   max-width: 100px;
