--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,7 +1,12 @@
 body {
   font-family: 'Lora', 'Times New Roman', serif;
-  font-size: 18px;
+  font-size: 16px;
   color: #404040;
+}
+@media only screen and (min-width: 480px) {
+  body {
+    font-size: 18px;
+  }
 }
 p {
   line-height: 1.5;
