--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -5,11 +5,11 @@ body {
 }
 @media only screen and (min-width: 480px) {
   body {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 p {
-  line-height: 1.5;
+  line-height: 1.75;
   margin: 30px 0;
 }
 p a {
@@ -39,6 +39,7 @@ blockquote {
   color: #808080;
   font-style: italic;
   white-space: pre-wrap;
+  line-height: 1.75px;
 }
 hr.small {
   max-width: 100px;
