--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 17px;
   color: #404040;
+  line-height: 1.75;
 }
 @media only screen and (min-width: 480px) {
   body {
