Update link style

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,8 +25,9 @@ layout: default
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-
-				{{ content }}
+                <div class="post">
+                    {{ content }}
+                </div>
 
                 <hr>
 
