--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -13,9 +13,6 @@ p {
   line-height: 1.75;
   margin: 30px 0;
 }
-p a {
-  text-decoration: underline;
-}
 h1,
 h2,
 h3,
@@ -26,7 +23,10 @@ h6 {
   font-weight: 800;
 }
 a {
-  text-decoration: underline;
+  color: #404040;
+}
+.post a {
+  color: #337ab7;
 }
 a:hover,
 a:focus {
