Make code scrollable

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,15 +1,15 @@
 /* to make lines scroll instead of wrap */
 /* from http://stackoverflow.com/a/23393920 */
 
-.highlight pre code * {
+.highlighter-rouge pre code * {
   white-space: nowrap;    // this sets all children inside to nowrap
 }
 
-.highlight pre {
+.highlighter-rouge pre {
   overflow-x: auto;       // this sets the scrolling in x
 }
 
-.highlight pre code {
+.highlighter-rouge pre code {
   white-space: pre;       // forces <code> to respect <pre> formatting
 }
 
