--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -411,3 +411,11 @@ body {
   background-color: #000;
   opacity: 0.5;
 }
+
+.post p {
+  white-space: pre-wrap; /* css-3 */
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
