--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,10 +20,8 @@ layout: default
 
 <!-- Main Content -->
 <div class="container">
-	<div class="row">
-		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-			{{ content }}
-		</div>
+	<div>
+		{{ content }}
 	</div>
 </div>
 
