--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -227,6 +227,15 @@ hr.small {
   .post-preview > a .post-title {
     margin-top: 30px;
   }
+
+  .post-preview {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .post-preview .post-meta {
+    margin-bottom: 0;
+  }
 }
 
 @media only screen and (min-width : 768px) {
