--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,7 +22,7 @@
                         <li>
                             <a href="{{ page.url | prepend: site.baseurl }}">Travel Blog</a>
                         </li>
-                    {% else if page.title == "Third World Nomad's Tech Blog" %}
+                    {% elsif page.title == "Third World Nomad's Tech Blog" %}
                         <li>
                             <a href="{{ page.url | prepend: site.baseurl }}">Tech Blog</a>
                         </li>
