--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
 
+    {% if page.header-img %}
+        <meta property="og:image" content="{{ site.baseurl }}/{{ page.header-img }}" />
+    {% endif %}
+
+    <meta property="og:description" content="{{ page.subtitle }}" />
+
     <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
