Fix og meta picture url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="{{ site.description }}">
 
     {% if page.header-img %}
-        <meta property="og:image" content="{{ site.baseurl }}/{{ page.header-img }}" />
+        <meta property="og:image" content="{{ site.url }}/{{ page.header-img }}" />
     {% endif %}
 
     <meta property="og:description" content="{{ page.subtitle }}" />
