Disable hover in small screen

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -57,6 +57,7 @@ hr.small {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .navbar-custom .navbar-brand {
+  color: white;
   font-weight: 800;
 }
 .navbar-custom .nav li a {
@@ -133,6 +134,15 @@ hr.small {
     -o-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
   }
+}
+.navbar-default .navbar-brand:hover {
+  color: white;
+}
+.navbar-default .navbar-nav>li>a {
+  color: white;
+}
+.navbar-default .navbar-nav>li>a:hover {
+  color: white;
 }
 .intro-header {
   background: no-repeat center center;
