--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,7 +17,7 @@ layout: default
 </header>-->
 
 <!-- Main Content -->
-<div class="container" style="padding-top: 125px;">
+<div class="container page">
 	<div class="col-md-10 col-md-offset-1">
 		{{ content }}
 	</div>
