--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -166,6 +166,14 @@ hr.small {
   .intro-header .page-heading {
     padding: 150px 0;
   }
+  .page {
+    padding-top: 125px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .page {
+    padding-top: 60px;
+  }
 }
 .intro-header .site-heading,
 .intro-header .page-heading {
