Reduce navbar-brand font-size on small screen

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -66,6 +66,11 @@ hr.small {
   font-weight: 800;
   letter-spacing: 1px;
 }
+@media only screen and (max-width: 768px) {
+  .navbar-custom .navbar-brand {
+    font-size: 14px;
+  }
+}
 @media only screen and (min-width: 768px) {
   .navbar-custom {
     background: transparent;
