Add blurry L2 post

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -432,6 +432,9 @@ form .row:first-child .floating-label-form-group {
   text-shadow: none;
   background: #0085a1;
 }
+img {
+  margin: auto;
+}
 img::selection {
   color: white;
   background: transparent;
