Use Computer Modern and Consolas

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1532,7 +1532,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: Consolas, "Courier New", monospace;
 }
 code {
   padding: 2px 4px;
@@ -6757,4 +6757,3 @@ button.close {
     display: none !important;
   }
 }
-/*# sourceMappingURL=bootstrap.css.map */
