--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@ layout: default
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="post">
-                    <h1 style="text-align: center; font-size: 36px; padding-bottom: 50px;">{{ page.title }}</h1>
+                    <h1 style="text-align: center; font-size: 36px; padding-bottom: 2em;">{{ page.title }}</h1>
                     {{ content }}
                 </div>
 
