--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -477,3 +477,7 @@ body {
   white-space: -o-pre-wrap; /* Opera 7 */
   word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
+
+.post li {
+  margin-bottom: 0.5em;
+}
