--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -476,6 +476,7 @@ body {
   white-space: -pre-wrap; /* Opera 4-6 */
   white-space: -o-pre-wrap; /* Opera 7 */
   word-wrap: break-word; /* Internet Explorer 5.5+ */
+  text-align: justify;
 }
 
 .post li {
