--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -85,6 +85,12 @@ hr.small {
   .navbar-custom .navbar-brand {
     font-size: 14px;
   }
+
+  .container {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+    font-size: 16px !important;
+  }
 }
 @media only screen and (min-width: 768px) {
   .navbar-custom {
