--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -26,6 +26,16 @@ h6 {
   font-weight: 800;
 }
 
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+  margin-top: 50px;
+  margin-bottom: 10px;
+}
+
 #aboutme h3 {
   margin-top: 0px !important;
   margin-bottom: 1em !important;
