--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,13 +1,13 @@
 body {
-  font-family: Georgia, serif;
-  font-size: 18px;
+  font-family: "Times New Roman", serif;
+  font-size: 19px;
   color: #404040;
-  line-height: 1.5;
+  line-height: 1.25;
 }
 
 @media only screen and (min-width: 480px) {
   body {
-    font-size: 18px;
+    font-size: 19px;
   }
 }
 p {
@@ -15,7 +15,7 @@ p {
   margin: 20px 0;
 }
 ul, ol {
-  margin: 30px 0;
+  margin: 20px 0;
 }
 h1,
 h2,
@@ -45,6 +45,10 @@ h6,
   margin-top: 0px !important;
   margin-bottom: 0.25em !important;
   font-size: 17px;
+}
+
+pre {
+  font-size: 14px;
 }
 
 a {
@@ -498,7 +502,7 @@ body {
 }
 
 .post li {
-  margin-bottom: 0.5em;
+  margin-bottom: 0.2em;
 }
 
 .post li ol {
