--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -103,7 +103,7 @@ hr.small {
   .container {
     padding-left: 15px !important;
     padding-right: 15px !important;
-    font-size: 16px !important;
+    /*font-size: 16px !important;*/
   }
 }
 @media only screen and (min-width: 768px) {
