Add global Tex macros

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,4 +36,37 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <p style="display: none">
+        $$
+            \newcommand{\dint}{\text{d}}
+            \newcommand{\vphi}{\boldsymbol{\phi}}
+            \newcommand{\vpi}{\boldsymbol{\pi}}
+            \newcommand{\vpsi}{\boldsymbol{\psi}}
+            \newcommand{\vomg}{\boldsymbol{\omega}}
+            \newcommand{\vsigma}{\boldsymbol{\sigma}}
+            \newcommand{\vzeta}{\boldsymbol{\zeta}}
+            \renewcommand{\vx}{\mathbf{x}}
+            \renewcommand{\vy}{\mathbf{y}}
+            \renewcommand{\vz}{\mathbf{z}}
+            \renewcommand{\vh}{\mathbf{h}}
+            \renewcommand{\b}{\mathbf}
+            \renewcommand{\vec}{\text{vec}}
+            \newcommand{\vecemph}{\text{\emph{vec}}}
+            \newcommand{\mvn}{\mathcal{MN}}
+            \newcommand{\M}{\mathcal{M}}
+            \newcommand{\N}{\mathcal{N}}
+            \newcommand{\diag}[1]{\text{diag}(#1)}
+            \newcommand{\diagemph}[1]{\text{\emph{diag}}(#1)}
+            \newcommand{\tr}[1]{\text{tr}(#1)}
+            \renewcommand{\R}{\mathbb{R}}
+            \renewcommand{\E}{\mathbb{E}}
+            \newcommand{\D}{\mathcal{D}}
+            \newcommand{\inner}[1]{\langle #1 \rangle}
+            \newcommand{\innerbig}[1]{\left \langle #1 \right \rangle}
+            \newcommand{\abs}[1]{\lvert #1 \rvert}
+            \newcommand{\norm}[1]{\lVert #1 \rVert}
+            \newcommand{\two}{\text{II}}
+        $$
+    </p>
+
 </head>
