Update geometry notes: add Lie groups.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,11 +53,13 @@
             \renewcommand{\vec}{\text{vec}}
             \newcommand{\vecemph}{\text{\emph{vec}}}
             \newcommand{\mvn}{\mathcal{MN}}
+            \newcommand{\G}{\mathcal{G}}
             \newcommand{\M}{\mathcal{M}}
             \newcommand{\N}{\mathcal{N}}
             \newcommand{\diag}[1]{\text{diag}(#1)}
             \newcommand{\diagemph}[1]{\text{\emph{diag}}(#1)}
             \newcommand{\tr}[1]{\text{tr}(#1)}
+            \renewcommand{\C}{\mathbb{C}}
             \renewcommand{\R}{\mathbb{R}}
             \renewcommand{\E}{\mathbb{E}}
             \newcommand{\D}{\mathcal{D}}
@@ -66,6 +68,8 @@
             \newcommand{\abs}[1]{\lvert #1 \rvert}
             \newcommand{\norm}[1]{\lVert #1 \rVert}
             \newcommand{\two}{\text{II}}
+            \newcommand{\GL}{\text{GL}}
+            \newcommand{\Id}{\text{Id}}
         $$
     </p>
 
