Add vector field

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,6 +70,7 @@
             \newcommand{\two}{\text{II}}
             \newcommand{\GL}{\text{GL}}
             \newcommand{\Id}{\text{Id}}
+            \newcommand{\grad}[1]{\text{grad} \, #1}
         $$
     </p>
 
