--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -59,3 +59,12 @@
 <script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
 
 <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+        inlineMath: [['$','$'], ['\\(','\\)']],
+        processEscapes: true
+    }
+  });
+</script>
