--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,6 +56,7 @@
             \newcommand{\G}{\mathcal{G}}
             \newcommand{\M}{\mathcal{M}}
             \newcommand{\N}{\mathcal{N}}
+            \newcommand{\S}{\mathcal{S}}
             \newcommand{\diag}[1]{\text{diag}(#1)}
             \newcommand{\diagemph}[1]{\text{\emph{diag}}(#1)}
             \newcommand{\tr}[1]{\text{tr}(#1)}
@@ -71,6 +72,9 @@
             \newcommand{\GL}{\text{GL}}
             \newcommand{\Id}{\text{Id}}
             \newcommand{\grad}[1]{\text{grad} \, #1}
+            \newcommand{\Hess}[1]{\text{Hess} \, #1}
+            \newcommand{\T}{\text{T}}
+            \newcommand{\dim}[1]{\text{dim} \, #1}
         $$
     </p>
 
