Add Riemannian manifold optimization post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -72,9 +72,11 @@
             \newcommand{\GL}{\text{GL}}
             \newcommand{\Id}{\text{Id}}
             \newcommand{\grad}[1]{\text{grad} \, #1}
+            \newcommand{\gradat}[2]{\text{grad} \, #1 \, \vert_{#2}}
             \newcommand{\Hess}[1]{\text{Hess} \, #1}
             \newcommand{\T}{\text{T}}
             \newcommand{\dim}[1]{\text{dim} \, #1}
+            \newcommand{\partder}[2]{\frac{\partial #1}{\partial #2}}
         $$
     </p>
 
