Add immersion, submersion, and embedding notes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
 
     <p style="display: none">
         $$
-            \newcommand{\dint}{\text{d}}
+            \newcommand{\dint}{\mathrm{d}}
             \newcommand{\vphi}{\boldsymbol{\phi}}
             \newcommand{\vpi}{\boldsymbol{\pi}}
             \newcommand{\vpsi}{\boldsymbol{\psi}}
@@ -50,15 +50,15 @@
             \renewcommand{\vz}{\mathbf{z}}
             \renewcommand{\vh}{\mathbf{h}}
             \renewcommand{\b}{\mathbf}
-            \renewcommand{\vec}{\text{vec}}
-            \newcommand{\vecemph}{\text{\emph{vec}}}
+            \renewcommand{\vec}{\mathrm{vec}}
+            \newcommand{\vecemph}{\mathrm{vec}}
             \newcommand{\mvn}{\mathcal{MN}}
             \newcommand{\G}{\mathcal{G}}
             \newcommand{\M}{\mathcal{M}}
             \newcommand{\N}{\mathcal{N}}
             \newcommand{\S}{\mathcal{S}}
-            \newcommand{\diag}[1]{\text{diag}(#1)}
-            \newcommand{\diagemph}[1]{\text{\emph{diag}}(#1)}
+            \newcommand{\diag}[1]{\mathrm{diag}(#1)}
+            \newcommand{\diagemph}[1]{\mathrm{diag}(#1)}
             \newcommand{\tr}[1]{\text{tr}(#1)}
             \renewcommand{\C}{\mathbb{C}}
             \renewcommand{\R}{\mathbb{R}}
@@ -68,15 +68,16 @@
             \newcommand{\innerbig}[1]{\left \langle #1 \right \rangle}
             \newcommand{\abs}[1]{\lvert #1 \rvert}
             \newcommand{\norm}[1]{\lVert #1 \rVert}
-            \newcommand{\two}{\text{II}}
-            \newcommand{\GL}{\text{GL}}
-            \newcommand{\Id}{\text{Id}}
-            \newcommand{\grad}[1]{\text{grad} \, #1}
-            \newcommand{\gradat}[2]{\text{grad} \, #1 \, \vert_{#2}}
-            \newcommand{\Hess}[1]{\text{Hess} \, #1}
+            \newcommand{\two}{\mathrm{II}}
+            \newcommand{\GL}{\mathrm{GL}}
+            \newcommand{\Id}{\mathrm{Id}}
+            \newcommand{\grad}[1]{\mathrm{grad} \, #1}
+            \newcommand{\gradat}[2]{\mathrm{grad} \, #1 \, \vert_{#2}}
+            \newcommand{\Hess}[1]{\mathrm{Hess} \, #1}
             \newcommand{\T}{\text{T}}
-            \newcommand{\dim}[1]{\text{dim} \, #1}
+            \newcommand{\dim}[1]{\mathrm{dim} \, #1}
             \newcommand{\partder}[2]{\frac{\partial #1}{\partial #2}}
+            \newcommand{\rank}[1]{\mathrm{rank} \, #1}
         $$
     </p>
 
