Replace TNR with Times

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Times New Roman", serif;
+  font-family: Times, serif;
   font-size: 19px;
   color: #404040;
   line-height: 1.25;
