Add covector fields article

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,7 +58,7 @@
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
 
-<script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+<script type="text/javascript" src="{{ site.mathjax_url }}"></script>
 
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
