Geometry of normal distributions post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -78,6 +78,7 @@
             \newcommand{\dim}[1]{\mathrm{dim} \, #1}
             \newcommand{\partder}[2]{\frac{\partial #1}{\partial #2}}
             \newcommand{\rank}[1]{\mathrm{rank} \, #1}
+            \newcommand{\inv}{{-1}}
         $$
     </p>
 
