[Draft] Chentsov's Theorem

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,6 +57,7 @@
             \newcommand{\M}{\mathcal{M}}
             \newcommand{\N}{\mathcal{N}}
             \newcommand{\S}{\mathcal{S}}
+            \newcommand{\I}{\mathcal{I}}
             \newcommand{\diag}[1]{\mathrm{diag}(#1)}
             \newcommand{\diagemph}[1]{\mathrm{diag}(#1)}
             \newcommand{\tr}[1]{\text{tr}(#1)}
