Draft Laplace post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -80,6 +80,10 @@
             \newcommand{\partder}[2]{\frac{\partial #1}{\partial #2}}
             \newcommand{\rank}[1]{\mathrm{rank} \, #1}
             \newcommand{\inv}{{-1}}
+            \newcommand{\map}{\text{MAP}}
+            \newcommand{\L}{\mathcal{L}}
+            \DeclareMathOperator*{\argmax}{arg\,max}
+            \DeclareMathOperator*{\argmin}{arg\,min}
         $$
     </p>
 
